fixed food menus not wrapping on mobile

--- a/wp-content/themes/123_parent/__build/_css/main.css
+++ b/wp-content/themes/123_parent/__build/_css/main.css
@@ -5675,7 +5675,7 @@ section.block__food_menus > .container #tabs_style__pills .menu_photo_tiled_x3 >
   }
   section.block__food_menus > .container #tabs_style__sidebar {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
   }
   section.block__food_menus > .container #tabs_style__sidebar > .menu_area {
     flex: 1 1 80%;
@@ -5910,6 +5910,9 @@ section.block__food_menus > .container #tabs_style__sidebar > .menu_area > .menu
   }
 }
 @media only screen and (max-width: 640px) {
+  section.block__food_menus > .container #tabs_style_sidebar {
+    flex-flow: column nowrap;
+  }
   section.block__food_menus > .container .tabs {
     flex-flow: column nowrap;
   }
